# qopenremote

./: .gitignore  CMakeLists.txt
src/: bijectivemap.h  enumutil.cpp  enumutil.h  json.cpp  json.h  jsonadapter.cpp  jsonadapter.h  listmodel.cpp  listmodel.h  qlistmodel.cpp  qlistmodel.h  qobjectregistry.cpp  qobjectregistry.h  qopenremote_global.h  qopenremoteadapter.cpp  qopenremoteadapter.h  qtility_global.h  quicktestengine.cpp  quicktestengine.h  qvariantlistmodel.cpp  qvariantlistmodel.h  remote.cpp  remote.h  setting.cpp  setting.h  sortfilterproxylistmodel.cpp  sortfilterproxylistmodel.h  websocketserver.cpp  websocketserver.h
tests/: CMakeLists.txt  json-test.cpp  qobjectregistry-test.cpp
